--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,8 @@
     "@repo/ui": "*",
     "next": "^15.2.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "db":"*"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
